fixed gap at the bottom of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
   background-image: linear-gradient(#14213d, #000);
   min-height: 100vh;
   color: #ffffff;
-  font-family: 'Anek Kannada', sans-serif;
+  font-family: "Anek Kannada", sans-serif;
 }
 
 p {
@@ -22,7 +22,7 @@ button {
   color: #000;
   box-shadow: 2px 2px 6px #ffffff;
   padding: 8px;
-  border:#000 2px solid;
+  border: #000 2px solid;
   border-radius: 6px;
   font-size: 18px;
   display: block;
@@ -52,7 +52,7 @@ h1 {
   box-shadow: 4px 6px 16px #6c757d;
   border: #000 1px solid;
   border-radius: 1em;
-  color:#000;
+  color: #000;
   font-size: 20px;
 }
 
@@ -72,6 +72,7 @@ h1 {
 #mainPlanets {
   font-size: 20px;
 }
+
 .planetIcon {
   height: 25px;
   margin-left: 10px;
@@ -89,8 +90,8 @@ h1 {
 }
 
 #right-label {
-border-radius: 6px;
-font-size: 24px;
+  border-radius: 6px;
+  font-size: 24px;
 }
 
 #imageModal p {
